2005-08-17 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b10

	* Fix: When using do_command.php e.g.for creating new album and Gallery is embedded,
	       "Attempted security breach." occured due to new full url schema added in 
	       1.5.1-RC2-cvs-b14 + 1.5.1-RC3-cvs-b3

	* Fix: After creating a new album, with debug and email on, 
	       an Error occured and dismiss button didnt work.

2005-08-16 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b9

	* Fix: Moved and adapted setup/functions.inc to lib/setup.php.
	       Some functions in this file are also used outside setup, 
	       so when user protect the setup folder some functions where unavailable.

	* New: Added functions fs_is_writable

	* Fix: .htacces is optional, use function above to check to prevent error message.	

2005-08-16 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b8

	* Fix: Wording. 'strg' is german ;) 'ctrl' is more international.

	* Change: Some indenting.

	* "Fix": Change some <td nowrap> and put it into css class.
		 Affected are class "head" and "title".

2005-08-14  Alan Harder <alan.harder@sun.com>  1.5.1-RC3-cvs-b7

	* Allow access to hidden photos via direct url.
	  (rollback change from Gallery 1.3.1)

2005-08-14 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b6

	* Fix: Use makeGalleryAlbumHeaderUrl() in links in Emails.
	       - edit_appearance.php
	       - classes/Album.php
	       - lib/mail.php

	Thanks to Ansolom.

	* Change: Some indenting and phpdocs.

2005-08-13 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b5

	* Fix: Using referer for generating embedded urlprefix wasnt a good idea.
	        Instead now use Gallery Url + script_name.

	Thanks to Mark (SG7)

2005-08-12  Bharat Mediratta  <bharat@menalto.com> 1.5.1-RC3-cvs-b4

	* Fix: typo in albums.php 'posess' -> 'possess' (thanks driz)

2005-08-12 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b3

	* Fix: Added path to folder to the url when Gallery is embedded in *Nuke,
	       but not in the document root.
